--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
 
 rootProject.name = 'Ir-Service'
-include   ':SRB-2596'
-project(':SRB-2596').projectDir = new File(settingsDir, '../SRB-2596')
+include   ':pureHibernateProject'
+project(':pureHibernateProject').projectDir = new File(settingsDir, '../pureHibernateProject')
